// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test IF statements test common cases 1`] = `
Program {
  "children": Array [
    If {
      "alternate": If {
        "alternate": If {
          "alternate": Block {
            "children": Array [
              Echo {
                "expressions": Array [
                  String {
                    "isDoubleQuote": true,
                    "kind": "string",
                    "raw": "\\"else\\"",
                    "unicode": false,
                    "value": "else",
                  },
                ],
                "kind": "echo",
                "shortForm": false,
              },
            ],
            "kind": "block",
          },
          "body": Block {
            "children": Array [
              Echo {
                "expressions": Array [
                  String {
                    "isDoubleQuote": true,
                    "kind": "string",
                    "raw": "\\"2nd\\"",
                    "unicode": false,
                    "value": "2nd",
                  },
                ],
                "kind": "echo",
                "shortForm": false,
              },
            ],
            "kind": "block",
          },
          "kind": "if",
          "shortForm": false,
          "test": Boolean {
            "kind": "boolean",
            "raw": "false",
            "value": false,
          },
        },
        "body": Block {
          "children": Array [
            Echo {
              "expressions": Array [
                String {
                  "isDoubleQuote": true,
                  "kind": "string",
                  "raw": "\\"false\\"",
                  "unicode": false,
                  "value": "false",
                },
              ],
              "kind": "echo",
              "shortForm": false,
            },
          ],
          "kind": "block",
        },
        "kind": "if",
        "shortForm": false,
        "test": Boolean {
          "kind": "boolean",
          "raw": "false",
          "value": false,
        },
      },
      "body": Block {
        "children": Array [
          Echo {
            "expressions": Array [
              String {
                "isDoubleQuote": true,
                "kind": "string",
                "raw": "\\"is true\\"",
                "unicode": false,
                "value": "is true",
              },
            ],
            "kind": "echo",
            "shortForm": false,
          },
        ],
        "kind": "block",
      },
      "kind": "if",
      "shortForm": false,
      "test": Boolean {
        "kind": "boolean",
        "raw": "true",
        "value": true,
      },
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test IF statements test issue #84 1`] = `
Program {
  "children": Array [
    Inline {
      "kind": "inline",
      "raw": "
        ",
      "value": "
        ",
    },
    If {
      "alternate": Block {
        "children": Array [
          Inline {
            "kind": "inline",
            "raw": "
        ",
            "value": "        ",
          },
        ],
        "kind": "block",
      },
      "body": Block {
        "children": Array [
          Inline {
            "kind": "inline",
            "raw": "
        ",
            "value": "        ",
          },
        ],
        "kind": "block",
      },
      "kind": "if",
      "shortForm": true,
      "test": Boolean {
        "kind": "boolean",
        "raw": "true",
        "value": true,
      },
    },
    Inline {
      "kind": "inline",
      "raw": "
      ",
      "value": "      ",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test IF statements test issue #168 1`] = `
Program {
  "children": Array [
    If {
      "alternate": null,
      "body": null,
      "kind": "if",
      "loc": Location {
        "end": Position {
          "column": 16,
          "line": 1,
          "offset": 16,
        },
        "source": "if ($foo);",
        "start": Position {
          "column": 6,
          "line": 1,
          "offset": 6,
        },
      },
      "shortForm": false,
      "test": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "loc": Location {
          "end": Position {
            "column": 14,
            "line": 1,
            "offset": 14,
          },
          "source": "$foo",
          "start": Position {
            "column": 10,
            "line": 1,
            "offset": 10,
          },
        },
        "name": "foo",
      },
    },
    Inline {
      "kind": "inline",
      "loc": Location {
        "end": Position {
          "column": 6,
          "line": 2,
          "offset": 26,
        },
        "source": "      ",
        "start": Position {
          "column": 0,
          "line": 2,
          "offset": 20,
        },
      },
      "raw": "
      ",
      "value": "      ",
    },
  ],
  "errors": Array [],
  "kind": "program",
  "loc": Location {
    "end": Position {
      "column": 6,
      "line": 2,
      "offset": 26,
    },
    "source": "<?php if ($foo); ?>
      ",
    "start": Position {
      "column": 0,
      "line": 1,
      "offset": 0,
    },
  },
}
`;

exports[`Test IF statements test issue #168 2`] = `
Program {
  "children": Array [
    If {
      "alternate": null,
      "body": null,
      "kind": "if",
      "loc": Location {
        "end": Position {
          "column": 15,
          "line": 1,
          "offset": 15,
        },
        "source": "if ($foo)",
        "start": Position {
          "column": 6,
          "line": 1,
          "offset": 6,
        },
      },
      "shortForm": false,
      "test": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "loc": Location {
          "end": Position {
            "column": 14,
            "line": 1,
            "offset": 14,
          },
          "source": "$foo",
          "start": Position {
            "column": 10,
            "line": 1,
            "offset": 10,
          },
        },
        "name": "foo",
      },
    },
    Inline {
      "kind": "inline",
      "loc": Location {
        "end": Position {
          "column": 6,
          "line": 2,
          "offset": 25,
        },
        "source": "      ",
        "start": Position {
          "column": 0,
          "line": 2,
          "offset": 19,
        },
      },
      "raw": "
      ",
      "value": "      ",
    },
  ],
  "errors": Array [],
  "kind": "program",
  "loc": Location {
    "end": Position {
      "column": 6,
      "line": 2,
      "offset": 25,
    },
    "source": "<?php if ($foo) ?>
      ",
    "start": Position {
      "column": 0,
      "line": 1,
      "offset": 0,
    },
  },
}
`;

exports[`Test IF statements test issue #168 3`] = `
Program {
  "children": Array [
    If {
      "alternate": null,
      "body": null,
      "kind": "if",
      "loc": Location {
        "end": Position {
          "column": 7,
          "line": 2,
          "offset": 23,
        },
        "source": "if ($foo)
      ;",
        "start": Position {
          "column": 6,
          "line": 1,
          "offset": 6,
        },
      },
      "shortForm": false,
      "test": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "loc": Location {
          "end": Position {
            "column": 14,
            "line": 1,
            "offset": 14,
          },
          "source": "$foo",
          "start": Position {
            "column": 10,
            "line": 1,
            "offset": 10,
          },
        },
        "name": "foo",
      },
    },
  ],
  "errors": Array [],
  "kind": "program",
  "loc": Location {
    "end": Position {
      "column": 7,
      "line": 2,
      "offset": 23,
    },
    "source": "<?php if ($foo)
      ;",
    "start": Position {
      "column": 0,
      "line": 1,
      "offset": 0,
    },
  },
}
`;

exports[`Test IF statements test short form 1`] = `
Program {
  "children": Array [
    If {
      "alternate": If {
        "alternate": Block {
          "children": Array [
            Echo {
              "expressions": Array [
                String {
                  "isDoubleQuote": true,
                  "kind": "string",
                  "raw": "\\"else\\"",
                  "unicode": false,
                  "value": "else",
                },
              ],
              "kind": "echo",
              "shortForm": false,
            },
          ],
          "kind": "block",
        },
        "body": Block {
          "children": Array [
            Echo {
              "expressions": Array [
                String {
                  "isDoubleQuote": true,
                  "kind": "string",
                  "raw": "\\"false\\"",
                  "unicode": false,
                  "value": "false",
                },
              ],
              "kind": "echo",
              "shortForm": false,
            },
          ],
          "kind": "block",
        },
        "kind": "if",
        "shortForm": true,
        "test": Boolean {
          "kind": "boolean",
          "raw": "false",
          "value": false,
        },
      },
      "body": Block {
        "children": Array [
          Echo {
            "expressions": Array [
              String {
                "isDoubleQuote": true,
                "kind": "string",
                "raw": "\\"is true\\"",
                "unicode": false,
                "value": "is true",
              },
            ],
            "kind": "echo",
            "shortForm": false,
          },
        ],
        "kind": "block",
      },
      "kind": "if",
      "shortForm": true,
      "test": Boolean {
        "kind": "boolean",
        "raw": "true",
        "value": true,
      },
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test IF statements test various cases 1`] = `
Program {
  "children": Array [
    If {
      "alternate": If {
        "alternate": If {
          "alternate": null,
          "body": Block {
            "children": Array [
              Echo {
                "expressions": Array [
                  String {
                    "isDoubleQuote": true,
                    "kind": "string",
                    "raw": "\\"false\\"",
                    "unicode": false,
                    "value": "false",
                  },
                ],
                "kind": "echo",
                "shortForm": false,
              },
            ],
            "kind": "block",
          },
          "kind": "if",
          "shortForm": true,
          "test": Boolean {
            "kind": "boolean",
            "raw": "false",
            "value": false,
          },
        },
        "body": Block {
          "children": Array [
            Echo {
              "expressions": Array [
                String {
                  "isDoubleQuote": true,
                  "kind": "string",
                  "raw": "\\"false\\"",
                  "unicode": false,
                  "value": "false",
                },
              ],
              "kind": "echo",
              "shortForm": false,
            },
          ],
          "kind": "block",
        },
        "kind": "if",
        "shortForm": true,
        "test": Boolean {
          "kind": "boolean",
          "raw": "false",
          "value": false,
        },
      },
      "body": Block {
        "children": Array [
          Echo {
            "expressions": Array [
              String {
                "isDoubleQuote": true,
                "kind": "string",
                "raw": "\\"is true\\"",
                "unicode": false,
                "value": "is true",
              },
            ],
            "kind": "echo",
            "shortForm": false,
          },
        ],
        "kind": "block",
      },
      "kind": "if",
      "shortForm": true,
      "test": Boolean {
        "kind": "boolean",
        "raw": "true",
        "value": true,
      },
    },
    If {
      "alternate": Block {
        "children": Array [
          Echo {
            "expressions": Array [
              String {
                "isDoubleQuote": true,
                "kind": "string",
                "raw": "\\"false\\"",
                "unicode": false,
                "value": "false",
              },
            ],
            "kind": "echo",
            "shortForm": false,
          },
        ],
        "kind": "block",
      },
      "body": Block {
        "children": Array [
          Echo {
            "expressions": Array [
              String {
                "isDoubleQuote": true,
                "kind": "string",
                "raw": "\\"is true\\"",
                "unicode": false,
                "value": "is true",
              },
            ],
            "kind": "echo",
            "shortForm": false,
          },
        ],
        "kind": "block",
      },
      "kind": "if",
      "shortForm": true,
      "test": Boolean {
        "kind": "boolean",
        "raw": "true",
        "value": true,
      },
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;
